<resources>
    <string name="app_name">Number Conversion</string>
    <string name="welcome">WELCOME</string>
    <string name="start">Start</string>
    <string name="about">About</string>
    <string name="copyright">Copyright @2020. Aulia Ilham Zukri</string>
    <string name="ini_conversion">ini Conversion</string>
    <string name="ini_about">ini About</string>
    <string name="input">Input here</string>
    <string name="decimal">Decimal</string>
    <string name="binary">Binary :</string>
    <string name="blank"> </string>
    <string name="hexa">Hexadecimal</string>
    <string name="octal">Octal :</string>
    <string name="convert">Convert now!!</string>
</resources>
